<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>uk.co.o2</groupId>
  <packaging>jar</packaging>
  <version>1.0.0</version>
  <name>json-schema-validator</name>
  <url>https://github.com/amerishk/json-schema-validator</url>
  <dependencies>
  	<dependency>
  		<groupId>com.fasterxml.jackson.core</groupId>
  		<artifactId>jackson-databind</artifactId>
  		<version>2.5.4</version>
  	</dependency>
  	<dependency>
  		<groupId>javax.ws.rs</groupId>
  		<artifactId>javax.ws.rs-api</artifactId>
  		<version>2.0.1</version>
  	</dependency>
  	<dependency>
  		<groupId>com.fasterxml.jackson.core</groupId>
  		<artifactId>jackson-core</artifactId>
  		<version>2.5.4</version>
  	</dependency>
  	<dependency>
  		<groupId>com.fasterxml.jackson.jaxrs</groupId>
  		<artifactId>jackson-jaxrs-json-provider</artifactId>
  		<version>2.5.4</version>
  	</dependency>
  	<dependency>
			<groupId>ch.qos.logback</groupId>
			<artifactId>logback-classic</artifactId>
			<version>1.1.3</version>
	</dependency>
	<dependency>
		<groupId>org.springframework</groupId>
		<artifactId>spring-beans</artifactId>
		<version>4.1.6.RELEASE</version>
	</dependency>
	<dependency>
		<groupId>junit</groupId>
		<artifactId>junit</artifactId>
		<version>4.12</version>
	</dependency>
	<dependency>
		<groupId>org.mockito</groupId>
		<artifactId>mockito-core</artifactId>
		<version>1.9.5</version>
	</dependency>
	<dependency>
		<groupId>org.glassfish.jersey.core</groupId>
		<artifactId>jersey-common</artifactId>
		<version>2.4.1</version>
	</dependency>
  </dependencies>
  <build>
		<finalName>${project.artifactId}</finalName>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.0</version>
				<configuration>
					<source>${jdk.version}</source>
					<target>${jdk.version}</target>
				</configuration>
			</plugin>
			<plugin>
		    <groupId>org.apache.maven.plugins</groupId>
		    <artifactId>maven-surefire-plugin</artifactId>
		    <version>2.4.2</version>
		    <configuration>
		    <skipTests>false</skipTests>
		    <argLine>-Xms1024m -Xmx1024m -XX:PermSize=1024m -XX:MaxPermSize=1024m</argLine>		 	  
		      <excludes>
		        <exclude>**/junitTest/*.java</exclude>
		       </excludes>
		    </configuration>
		  </plugin>
		</plugins>
	</build>
  <artifactId>json-schema-validator</artifactId>
  <scm>
  	<url>https://github.com/amerishk/json-schema-validator</url>
  </scm>
  <properties>
  	<jdk.version>1.7</jdk.version>
  </properties>
</project>
